complete profile features and some UI message

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URL: "mongodb+srv://nntchinh2001:Bum2001@chat-app.iud2o.mongodb.net/?retryWrites=true&w=majority&appName=chat-app"
 TOKEN_SECRET_KEY: Bum@2001
+FRONTEND_URL:'http://localhost:5173'
